--- a/frontend/front-cinema/src/App.css
+++ b/frontend/front-cinema/src/App.css
@@ -1,3 +1,7 @@
+body{
+    /* overflow: hidden; */
+}
+
 .App{
     width: 100%;
     height: 100%;
@@ -14,4 +18,34 @@
     width: Calc(100% - 100px);
     border: 1px solid black;
     border-radius: 20px;
+}
+
+#modal_contrainer{
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+#modal{
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% сверху и по центру */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Может быть больше или меньше, в зависимости от размера экрана */
+}
+
+.film_conteiner{
+    padding: 20px;
+    box-shadow: -2px 2px 5px 1px rgba(34, 60, 80, 0.2);
+}
+
+.film_conteiner:last-child{
+    /* border-bottom: 0px; */
 }
