--- a/frontend/front-cinema/src/App.css
+++ b/frontend/front-cinema/src/App.css
@@ -35,17 +35,18 @@ body{
 
 #modal{
     background-color: #fefefe;
-    margin: 15% auto; /* 15% сверху и по центру */
+    margin: 15% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Может быть больше или меньше, в зависимости от размера экрана */
+    width: 50%;
+}
+
+.icon{
+    width: 25px;
+    height: 25px;
 }
 
 .film_conteiner{
     padding: 20px;
     box-shadow: -2px 2px 5px 1px rgba(34, 60, 80, 0.2);
-}
-
-.film_conteiner:last-child{
-    /* border-bottom: 0px; */
 }
